subindo atualização de foto e requisitos 12, 13, 14 e 15

--- a/style.css
+++ b/style.css
@@ -1,10 +1,60 @@
 body {
   background-color: rgb(253, 251, 251);
+  font-family: Montserrat, sans-serif;
+}
+p {
+  letter-spacing: 0.6px;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: red;
+  display: inline-block;
+  background-color: rgb(255, 245, 233);
+  left: 0;
+  right: 0;
+}
+#titulo {
+  color: brown;
+  margin-left: 40px;
+  font-size: 30px;
 }
 
+#menu1 li {
+  display: inline-block;
+}
+
+#minha_foto {
+  margin-top: 110px;
+  margin-left: 140px;
+  margin-bottom: 30px;
+  width: 400px;
+  border-radius: 100%;
+  padding: 10px;
+  background-color:  rgb(255, 245, 233);
+}
+
+.lado-esquerdo {
+  float: left;
+}
+
+.lado-direito {
+  max-width: 800px;
+  margin-bottom: 250px;
+}
+
+li:hover {
+  color: red;
+}
+aside {
+  max-width: 800px;
+}
+
+th:hover {
+  color: red;
+}
+
+th {
+  border: 2px solid rgb(53, 53, 53);
+  padding: 10px;
+}
