--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ p {
 
 #menu1 li {
   display: inline-block;
+  border: 2px solid rgb(238, 238, 238);
+  padding: 10px;
 }
 
 #minha_foto {
@@ -50,11 +52,12 @@ aside {
   max-width: 800px;
 }
 
-th:hover {
+
+.dadosTabela:hover {
   color: red;
 }
 
-th {
+.dadosTabela {
   border: 2px solid rgb(53, 53, 53);
   padding: 10px;
 }
