--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   background-color: rgb(253, 251, 251);
   font-family: Montserrat, sans-serif;
-}
-p {
   letter-spacing: 0.6px;
+  color: rgb(33, 33, 33);
+  font-size: 14px;
+  font-weight:400;
 }
 
 #cabecalho {
@@ -14,10 +15,15 @@ p {
   left: 0;
   right: 0;
 }
+
 #titulo {
   color: brown;
   margin-left: 40px;
   font-size: 30px;
+}
+
+li:hover {
+  color: red;
 }
 
 #menu1 li {
@@ -33,7 +39,7 @@ p {
   width: 400px;
   border-radius: 100%;
   padding: 10px;
-  background-color:  rgb(255, 245, 233);
+  background-color: rgb(255, 245, 233);
 }
 
 .lado-esquerdo {
@@ -45,19 +51,16 @@ p {
   margin-bottom: 250px;
 }
 
-li:hover {
-  color: red;
-}
 aside {
   max-width: 800px;
-}
-
-
-.dadosTabela:hover {
-  color: red;
 }
 
 .dadosTabela {
   border: 2px solid rgb(53, 53, 53);
   padding: 10px;
 }
+
+.dadosTabela:hover {
+  color: red;
+}
+
